Clarify webin-cli installation and usage instructions
Updated instructions for using webin-cli tool, including clarifications and corrections to the text.